feat: enviar e fazer download de curriculo